# nicdgonzalez.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  astro.config.mjs  global.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: gh-pages.yml  main.yml
src/: App.tsx  global.css  index.tsx  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/_sections/: About.tsx  Contact.tsx  Home.tsx  Projects.tsx
src/components/: BackgroundBeams.tsx  Banner.tsx  Button.tsx  Container.tsx  FadeUpOnScroll.tsx  Header.tsx  Heading.tsx  Navigation.tsx  Section.tsx  Subheading.tsx  button.rs  heading.rs  list.rs  mod.rs  nav.rs  navigation.rs  section.rs
src/layouts/: Layout.astro
src/lib/: merge.ts  utils.ts
src/pages/: index.astro
src/routes/: layout.tsx  page.tsx
src/routes/_components/: Header.tsx
src/styles/: global.css
src/views/: home.rs
src/views/home/: contact.rs  hero.rs  mod.rs  projects.rs  resources.rs
static/css/: main.css
